syntax = "proto3";
package VirtualPaper.Grpc.Service.UserSetting;
import "google/protobuf/empty.proto";

service UserSettingService {
	rpc GetAppRulesSettings (google.protobuf.Empty) returns (AppRulesSettings);
	rpc SetAppRulesSettings (AppRulesSettings) returns (google.protobuf.Empty);
	rpc GetSettings (google.protobuf.Empty) returns (SettingsData);
	rpc SetSettings (SettingsData) returns (google.protobuf.Empty);	
}

message SettingsData {
	AppRulesEnum app_focus_pause = 1;
	AppRulesEnum app_fullscreen_pause = 2;
    AppTheme application_theme = 3;
    AppRulesEnum battery_pause = 4;
    AppRulesEnum power_save_mode_pause = 5;
    AppRulesEnum remote_desktop_pause = 6;
    AppSystemBackdrop system_backdrop = 7;
    string app_version = 8;
    string language = 9;    
    bool is_updated = 10;
    bool is_auto_start = 11;
    bool is_first_run = 12;

    string wallpaper_dir = 13;

    MonitorData selected_monitor = 14;
    bool is_audio_only_on_desktop = 15;
    StatuMechanismEnum statu_mechanism = 16;
    WallpaperScaler wallpaper_scaling = 17;
    int32 wallpaper_wait_time = 18;

    InputForwardMode input_forward = 19;
    bool mouse_input_mov_always = 20;

    WallpaperArrangement wallpaper_arrangement = 21;

    bool is_screensaver_lock_on_resume = 22;
    bool is_screensaver_empty_screen_show_black = 23;

    int32 process_timer_interval = 24;
}

message AppRulesSettings {
  repeated AppRulesData app_rules = 1;
}

message AppRulesData {
  string app_name = 1;
  AppRulesEnum rule = 2;
}

enum AppRulesEnum {
    pause = 0;
    ignore = 1;
    kill = 2;
}

enum AppTheme {
    auto = 0;
    light = 1;
    dark = 2;
}

enum AppSystemBackdrop {
    default = 0;
    mica = 1;
    acrylic = 2;
}

message MonitorData {
	string device_id = 1;
    string device_name = 2;
    string display_name = 3;

    int32 h_monitor = 4;
    bool is_primary = 5;

    Rectangle working_area = 6;
    Rectangle bounds = 7;

    string content = 9;
}

message Rectangle {
	int32 x = 1;
	int32 y = 2;
	int32 width = 3;
	int32 height = 4;
	int32 bottom = 5;
	int32 left = 6;
	int32 right = 7;
	int32 top = 8;
}

enum StatuMechanismEnum {
    perdisplay = 0;
    alldisplay = 1;
}

enum WallpaperScaler{        
    none = 0;
    fill = 1;
    uniform = 2;
    uniformFill = 3;
    autofit = 4;
}

enum InputForwardMode {
    off = 0;
    mouse = 1;
    mousekeybord = 2;
}

enum WallpaperArrangement {
    per = 0;
    span = 1;
    duplicate = 2;
}
